--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "96kuroguro/add_stickers_to_tesboch",
+    "description": "てすぼっちにステッカーを登録するボット",
     "require": {
         "telegram-bot/api": "^2.3"
     }
